# gode-1

./: .gitignore  .gitmodules  BUILD-ZH.md  CHANGELOG-ZH.md  CHANGELOG.md  CMakeLists.txt  README-ZH.md  README.md
.github/shell/: package-plugin.sh  prepare-typescript.sh
.github/workflows/: build.yml  docs.yml  release.yml  test.yml
docs/: astro.config.mjs  package.json  pnpm-lock.yaml
docs/public/: set-default-theme.js
docs/src/components/: HeaderLinks.astro  SiteTitle.astro
docs/src/content/docs/: index.md
docs/src/content/docs/getting-started/: first-script.md  installation.md  typescript-config.md
docs/src/content/docs/guides/: debugging.md  exporting.md  godot-api.md  interoperability.md  metadata.md  npm-packages.md
docs/src/content/docs/reference/: build-from-source.md  project-structure.md
docs/src/content/docs/zh/: index.md
docs/src/content/docs/zh/getting-started/: first-script.md  installation.md  typescript-config.md
docs/src/content/docs/zh/guides/: debugging.md  exporting.md  godot-api.md  interoperability.md  metadata.md  npm-packages.md
docs/src/content/docs/zh/reference/: build-from-source.md  project-structure.md
docs/src/styles/: gode.css
example/: project.godot  tsconfig.json
example/addons/gode/: gode.gd  plugin.cfg
example/addons/gode/binary/: gode.gdextension
example/addons/gode/config/: gode.json  tsconfig.json
example/addons/gode/runtime/: export_plugin.gd  export_plugin.gd.uid  typescript_compiler.js
example/scenes/: capability_workspace.tscn  main_menu.tscn  signal_test.tscn  test_workspace.tscn  tests_runner.tscn
example/scripts/: capability_catalog.ts  capability_selection.ts  capability_workspace.ts  main_menu.ts  test_catalog.ts  test_selection.ts  test_workspace.ts
example/scripts/tests/: commonjs_fixture.cjs  dependency_scan_test.ts  runtime_base_test.ts  runtime_helpers.js  runtime_helpers.ts  runtime_integration_test.js  runtime_integration_test.ts  signal_test.js  signal_test.ts  tests_runner.gd  tests_runner.gd.uid
example/scripts/types/: node-shims.d.ts
generator/: README.md  __init__.py  base_generator.py  builtin_classes_generator.py  class_generator.py  dts_generator.py  generator.py  register_generator.py  utility_functions_generator.py
generator/builtin/: builtin_classes_generator.py
generator/class/: class_generator.py
generator/core/: base_generator.py
generator/dts/: dts_generator.py
generator/register/: register_generator.py  utility_functions_generator.py
generator/templates/: builtin_binding.cpp.jinja2  builtin_binding.h.jinja2  builtin_vararg_method.h.jinja2  class_binding.cpp.jinja2  class_binding.h.jinja2  class_vararg_method.h.jinja2  register_builtin.cpp.jinja2  register_builtin.h.jinja2  register_classes.cpp.jinja2  register_classes.h.jinja2  utility_functions.cpp.jinja2  utility_functions_vararg.h.jinja2
generator/utils/: __init__.py  api_data.py  binding_policy.py  builtin_compat.py  type_mappings.py
include/compiler/: typescript_compiler.h
include/runtime/: color_okhsl_compat.h  func_utils.h  napi_error_utils.h  node_godot_bridge.h  node_inspector.h  node_runtime.h  ok_color.h  value_convert.h  vararg_macros.h
include/script/: script_callable.h  script_instance.h  script_instance_info.h  typescript_language.h  typescript_loader.h  typescript_saver.h  typescript_script.h
include/support/: javascript.h  javascript_loader.h  typescript.h  typescript_language.h  typescript_loader.h
include/support/javascript/: javascript_instance.h
include/support/typescript/: typescript.h
include/utils/: func_utils.h  gode_event_loop.h  node_bootstrap_scripts.h  node_module_resolver.h  node_runtime.h  value_convert.h  vararg_macros.h
shell/: build-android.ps1  build-android.sh  build-ios.sh  build-linux.sh  build-macos.sh  build-windows.ps1
src/: register_types.cpp
src/compiler/: node_typescript_compiler_bridge.cpp  typescript_compiler.cpp
src/runtime/: color_okhsl_compat.cpp  gode_event_loop.cpp  napi_error_utils.cpp  node_bootstrap_scripts.cpp  node_godot_bridge.cpp  node_inspector.cpp  node_module_resolver.cpp  node_runtime.cpp  value_convert.cpp
src/script/: script_callable.cpp  script_instance.cpp  script_instance_info.cpp  typescript_language.cpp  typescript_loader.cpp  typescript_saver.cpp  typescript_script.cpp  typescript_script_runtime.cpp
src/support/: javascript.cpp  javascript_callable.cpp  javascript_instance.cpp  javascript_instance_info.cpp  javascript_language.cpp  javascript_loader.cpp  javascript_saver.cpp  typescript.cpp  typescript_language.cpp  typescript_loader.cpp  typescript_saver.cpp
src/support/javascript/: javascript_callable.cpp  javascript_instance.cpp  javascript_instance_info.cpp
src/support/typescript/: typescript.cpp  typescript_loader.cpp
src/utils/: color_okhsl_compat.cpp  gode_event_loop.cpp  napi_error_utils.cpp  node_bootstrap_scripts.cpp  node_godot_bridge.cpp  node_module_resolver.cpp  node_runtime.cpp  node_typescript_compiler_bridge.cpp  typescript_compiler.cpp  value_convert.cpp
test/: run_godot_smoke.py  test_generator_output.py  test_godot_smoke_runner.py  test_repository_integrity.py  test_typescript_compiler_js.py
